--- a/models.ipynb
+++ b/models.ipynb
@@ -45,8 +45,9 @@
     "train = pd.read_csv(os.path.join('transform', 'train.csv'))\n",
     "test = pd.read_csv(os.path.join('transform', 'test.csv'))\n",
     "\n",
-    "train[['hour', 'month', 'week']] = train[['hour', 'month', 'week']].astype('category')\n",
-    "test[['hour', 'month', 'week']] = test[['hour', 'month', 'week']].astype('category')"
+    "categorical = ['hour', 'month', 'week', 'dayofweek']\n",
+    "# train[categorical] = train[categorical].astype('category')\n",
+    "# test[categorical] = test[categorical].astype('category')"
    ],
    "id": "f107fc3c0f7b0c0e",
    "outputs": [],
@@ -75,7 +76,7 @@
     "\n",
     "X, y = train.drop(columns=['pm2_5'], axis=1), train['pm2_5']\n",
     "test_ids = test['id']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=4)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=4)\n",
     "X_train = pd.DataFrame(X_train, columns=X.columns)\n",
     "X_test = pd.DataFrame(X_test, columns=X.columns)"
    ],
@@ -106,7 +107,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## <center>Optuna + lightGBM</center>",
+   "source": "### <center>Optuna + lightGBM</center>",
    "id": "f1951123b5b3569"
   },
   {
@@ -130,9 +131,9 @@
     "        'subsample': trial.suggest_float('subsample', 0.4, 1.0, log=True),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.4, 1.0, log=True),\n",
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
-    "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-5, 1, log=True),\n",
+    "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-5, 5.0, log=True),\n",
     "        'bagging_freq': 1,\n",
-    "        'device': 'cuda',\n",
+    "        'device': 'cpu',\n",
     "        'n_jobs': -1,\n",
     "        'random_state': trial.suggest_int('random_state', 0, 100),\n",
     "        'verbosity': -1\n",
@@ -170,7 +171,7 @@
    "cell_type": "code",
    "source": [
     "lgb_model = define_lightgbm_model(study_lightgbm.best_trial)\n",
-    "lgb_model.fit(X_train, y_train)\n",
+    "lgb_model.fit(X, y)\n",
     "lightgbm_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'random_state']\n",
     "lgb_pred = lgb_model.predict(X_test)\n",
     "root_mean_squared_error(y_test, lgb_pred)"
@@ -237,7 +238,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.plot_optimization_history(study_lightgbm)",
+   "source": "optuna.visualization.matplotlib.plot_optimization_history(study_lightgbm)",
    "id": "8f7608eef0ccc810",
    "outputs": [],
    "execution_count": null
@@ -251,7 +252,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.plot_slice(study_lightgbm, params=lightgbm_params)",
+   "source": "optuna.visualization.matplotlib.plot_slice(study_lightgbm, params=lightgbm_params)",
    "id": "8142b6308c8970fe",
    "outputs": [],
    "execution_count": null
@@ -265,7 +266,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.plot_param_importances(study_lightgbm)",
+   "source": "optuna.visualization.matplotlib.plot_param_importances(study_lightgbm)",
    "id": "6594be3641ad58f2",
    "outputs": [],
    "execution_count": null
@@ -332,7 +333,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## <center>Optuna + XGBoost</center>",
+   "source": "### <center>Optuna + XGBoost</center>",
    "id": "6b133f35295134be"
   },
   {
@@ -351,11 +352,12 @@
     "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 1, log=True),\n",
     "        'max_depth': trial.suggest_int('max_depth', 6, 15),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.1, 1, log=True),\n",
-    "        'tree_method': 'gpu_hist',\n",
+    "        'tree_method': 'hist',\n",
     "        'verbosity': 0,\n",
-    "        'enable_categorical': True,\n",
-    "        'device': 'cuda',\n",
-    "        'n_jobs': -1\n",
+    "        # 'enable_categorical': True,\n",
+    "        'device': 'cpu',\n",
+    "        'n_jobs': -1,\n",
+    "        'random_state': trial.suggest_int('random_state', 0, 100),\n",
     "    }\n",
     "    return xgb.XGBRegressor(**params)\n",
     "\n",
@@ -369,11 +371,7 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "study_xgboost = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.TPESampler())\n",
@@ -395,7 +393,7 @@
    "source": [
     "xgb_model = define_xgb_model(study_xgboost.best_trial)\n",
     "\n",
-    "xgb_model.fit(X_train, y_train)\n",
+    "xgb_model.fit(X, y)\n",
     "xgboost_params = ['n_estimators', 'subsample', 'reg_lambda', 'learning_rate', 'max_depth', 'colsample_bytree']\n",
     "xgb_pred = xgb_model.predict(X_test)\n",
     "root_mean_squared_error(y_test, xgb_pred)"
@@ -432,7 +430,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.plot_optimization_history(study_xgboost)",
+   "source": "optuna.visualization.matplotlib.plot_optimization_history(study_xgboost)",
    "id": "874d08b1ec57ed14",
    "outputs": [],
    "execution_count": null
@@ -446,7 +444,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.plot_slice(study_xgboost, params=xgboost_params)",
+   "source": "optuna.visualization.matplotlib.plot_slice(study_xgboost, params=xgboost_params)",
    "id": "9d180a1a7efb53f0",
    "outputs": [],
    "execution_count": null
@@ -460,7 +458,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.plot_param_importances(study_xgboost)",
+   "source": "optuna.visualization.matplotlib.plot_param_importances(study_xgboost)",
    "id": "b395fc81efef55f",
    "outputs": [],
    "execution_count": null
@@ -499,7 +497,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## <center>Stacking</center>",
+   "source": "### <center>Stacking</center>",
    "id": "716721f5dc6a4fc5"
   },
   {
@@ -507,16 +505,18 @@
    "cell_type": "code",
    "source": [
     "from sklearn.ensemble import StackingRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "\n",
     "stack_model = StackingRegressor(\n",
-    "    estimators=[('LGB', lgb_model), ('XGB', xgb_model)],\n",
+    "    estimators=[('lgb', lgb_model), ('xgb', xgb_model)],\n",
+    "    final_estimator=LinearRegression(),\n",
     "    cv=5,\n",
     "    n_jobs=-1,\n",
     "    passthrough=False\n",
-    ")"
+    ").fit(X, y)"
    ],
-   "id": "30036df73ec60e7a",
+   "id": "c5ba0a6fa82615a",
    "outputs": [],
    "execution_count": null
   },
@@ -529,7 +529,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(stack_model.predict(np.concatenate((lgb_final_pred, xgb_final_pred), axis=1)), 'stack_xgb_lgb.csv')",
+   "source": "save_to_csv(stack_model.predict(test.drop(columns=['id'], axis=1)), 'stack_xgb_lgb.csv')",
    "id": "9f21846de9642c71",
    "outputs": [],
    "execution_count": null
