--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -1,20 +1,6 @@
 {
  "cells": [
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "## <center>Analiza poziomu PM2.5 w afrykańskich miastach</center>\n",
-    "### Zespół:\n",
-    "<ol>\n",
-    "    <li style='font-size: 20px'>Hubert Kłosowski 242424</li>\n",
-    "    <li style='font-size: 20px'>Krzysztof Kolanek 242425</li>\n",
-    "    <li style='font-size: 20px'>Kamil Małecki 242464</li>\n",
-    "</ol>"
-   ],
-   "id": "1f0d1b566e5881dd"
-  },
-  {
    "cell_type": "code",
    "id": "fab525021207f8ad",
    "metadata": {
@@ -180,7 +166,7 @@
     "from sklearn.impute import KNNImputer\n",
     "\n",
     "\n",
-    "def fill_x(column_name='site_latitude'):\n",
+    "def fill_x(column_name='dayofweek'):\n",
     "    column_values = train[column_name].unique()\n",
     "    for date in column_values:\n",
     "        for i, column in enumerate(starts_with):\n",
@@ -193,7 +179,7 @@
     "                    train.drop(index=df.index, inplace=True)\n",
     "                    train.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "def fill_test(column_name='site_latitude'):\n",
+    "def fill_test(column_name='dayofweek'):\n",
     "    column_values = test[column_name].unique()\n",
     "    for date in column_values:\n",
     "        for i, column in enumerate(starts_with):\n",
@@ -236,21 +222,21 @@
     "\n",
     "\n",
     "test_ids = test['id']\n",
-    "train.drop(columns=['id', 'city', 'country', 'date', 'site_id'], inplace=True)\n",
-    "test.drop(columns=['id', 'city', 'country', 'date', 'site_id'], inplace=True)\n",
+    "train.drop(columns=['id', 'city', 'country', 'date', 'site_id', 'site_latitude', 'site_longitude'], inplace=True)\n",
+    "test.drop(columns=['id', 'city', 'country', 'date', 'site_id', 'site_latitude', 'site_longitude'], inplace=True)\n",
     "starts_with = train.columns.str.split('_', expand=True).levels[0].to_frame()\n",
-    "starts_with.drop(['month', 'hour', 'pm2', 'site'], inplace=True)\n",
+    "starts_with.drop(['month', 'hour', 'pm2'], inplace=True)\n",
     "starts_with = starts_with[0].tolist()\n",
     "\n",
     "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
     "train, test = drop_high_nans(train), drop_high_nans(test)\n",
     "# fill_x(), fill_test()\n",
-    "to_drop = drop_low_correlated_columns_to_pm2_5()\n",
-    "to_drop = np.concatenate((to_drop, drop_high_correlated_columns()), axis=0)\n",
-    "train, test = train.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
+    "# to_drop = drop_low_correlated_columns_to_pm2_5()\n",
+    "# to_drop = np.concatenate((to_drop, drop_high_correlated_columns()), axis=0)\n",
+    "# train, test = train.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
     "# train, test = subract_azimuth_zenith(train), subract_azimuth_zenith(test)\n",
-    "change_to_categorical()\n",
-    "categorical = train.select_dtypes(include=['category']).columns.values"
+    "# change_to_categorical()\n",
+    "# categorical = train.select_dtypes(include=['category']).columns.values"
    ],
    "id": "cba91ead48820415",
    "outputs": [],
@@ -327,9 +313,9 @@
    "source": [
     "def del_pm2_5_outliers():\n",
     "    indexes_to_drop = []\n",
-    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.955)\n",
+    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.99)\n",
     "    for i, el in enumerate(detect_outliers):\n",
-    "        if el > q2:\n",
+    "        if q1 < el > q2:\n",
     "            indexes_to_drop.append(i)\n",
     "    train.drop(indexes_to_drop, inplace=True)\n",
     "    train.reset_index(drop=True, inplace=True)\n",
@@ -433,20 +419,20 @@
     "train_pm2_5 = train['pm2_5']\n",
     "train.drop(columns=['pm2_5'], inplace=True)\n",
     "# Bez kategorycznych\n",
-    "scale_columns = train.columns.difference(categorical)\n",
-    "\n",
-    "scaler = make_column_transformer((StandardScaler(), scale_columns))\n",
-    "\n",
-    "train_cat, test_cat = train[categorical], test[categorical]\n",
-    "\n",
-    "train = pd.concat([pd.DataFrame(scaler.fit_transform(train[scale_columns]), columns=scaler.feature_names_in_), train_cat, train_pm2_5], axis=1)\n",
-    "test = pd.concat([test_ids, pd.DataFrame(scaler.transform(test[scale_columns]), columns=scaler.feature_names_in_), test_cat], axis=1)\n",
-    "train = train.round(decimals=3)\n",
-    "# Wszystkie kolumny\n",
-    "# scaler = StandardScaler()\n",
+    "# scale_columns = train.columns.difference(categorical)\n",
     "# \n",
-    "# train, test = scaler.fit_transform(train), scaler.transform(test)\n",
-    "# train, test = pd.concat([pd.DataFrame(train, columns=scaler.feature_names_in_), train_pm2_5], axis=1), pd.concat([test_ids, pd.DataFrame(test, columns=scaler.feature_names_in_)], axis=1)"
+    "# scaler = make_column_transformer((StandardScaler(), scale_columns))\n",
+    "# \n",
+    "# train_cat, test_cat = train[categorical], test[categorical]\n",
+    "# \n",
+    "# train = pd.concat([pd.DataFrame(scaler.fit_transform(train[scale_columns]), columns=scaler.feature_names_in_), train_cat, train_pm2_5], axis=1)\n",
+    "# test = pd.concat([test_ids, pd.DataFrame(scaler.transform(test[scale_columns]), columns=scaler.feature_names_in_), test_cat], axis=1)\n",
+    "# train = train.round(decimals=3)\n",
+    "# Wszystkie kolumny\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "train, test = scaler.fit_transform(train), scaler.transform(test)\n",
+    "train, test = pd.concat([pd.DataFrame(train, columns=scaler.feature_names_in_), train_pm2_5], axis=1), pd.concat([test_ids, pd.DataFrame(test, columns=scaler.feature_names_in_)], axis=1)"
    ],
    "id": "initial_id",
    "outputs": [],
