dodatkowe dane nie oddaly

--- a/models.ipynb
+++ b/models.ipynb
@@ -124,13 +124,13 @@
     "        'objective': 'root_mean_squared_error',\n",
     "        'boosting_type': 'gbdt',\n",
     "        'num_leaves': trial.suggest_int('num_leaves', 40, 256),\n",
-    "        'max_depth': trial.suggest_int('max_depth', 7, 15),\n",
-    "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 1e-1, log=True),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 5, 19),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 6e-3, 5e-2, log=True),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
     "        'tree_learner': 'voting',\n",
     "        'subsample': trial.suggest_float('subsample', 0.4, 1.0, log=True),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.4, 1.0, log=True),\n",
-    "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
+    "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 250),\n",
     "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-5, 5.0, log=True),\n",
     "        'bagging_freq': 1,\n",
     "        'device': 'cpu',\n",
@@ -193,7 +193,7 @@
     "from sklearn.model_selection import LearningCurveDisplay\n",
     "\n",
     "\n",
-    "LearningCurveDisplay.from_estimator(lgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
+    "# LearningCurveDisplay.from_estimator(lgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
    ],
    "id": "528e272d6b0016a0",
    "outputs": [],
@@ -523,7 +523,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Ostateczna predykcja",
+   "source": "### Stacking predykcja",
    "id": "cf87d1caf7e9c50c"
   },
   {
@@ -531,6 +531,42 @@
    "cell_type": "code",
    "source": "save_to_csv(stack_model.predict(test.drop(columns=['id'], axis=1)), 'stack_xgb_lgb.csv')",
    "id": "9f21846de9642c71",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### <center>Voting</center>",
+   "id": "44c6d9994970eeef"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from sklearn.ensemble import VotingRegressor\n",
+    "\n",
+    "\n",
+    "voting_model = VotingRegressor(\n",
+    "    estimators=[('lgb', lgb_model), ('xgb', xgb_model)],\n",
+    "    n_jobs=-1\n",
+    ").fit(X, y)"
+   ],
+   "id": "946d2e452c0234cf",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Voting predykcja",
+   "id": "f1555fe61d4a5a99"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "save_to_csv(voting_model.predict(test.drop(columns=['id'], axis=1)), 'voting_xgb_lgb.csv')",
+   "id": "d9e910710f09aef6",
    "outputs": [],
    "execution_count": null
   },
