--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -27,6 +27,7 @@
    "cell_type": "code",
    "source": [
     "train = pd.read_csv(os.path.join('data', 'train.csv'))\n",
+    "train_additional = pd.read_csv(os.path.join('data', 'train_layer.csv'))\n",
     "test = pd.read_csv(os.path.join('data', 'test.csv'))\n",
     "\n",
     "train.info()"
@@ -38,10 +39,16 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "train.head()",
+   "source": "train_additional.info()",
    "id": "515b618d3712eac7",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Przygotuj dodatkowe dane treningowe",
+   "id": "b7a2704db3c9413b"
   },
   {
    "metadata": {},
@@ -57,12 +64,14 @@
     "    dataframe['date'] = pd.to_datetime(dataframe['date'])\n",
     "    dataframe['dayofweek'] = dataframe['date'].dt.dayofweek.astype('category')\n",
     "    dataframe['week'] = dataframe['date'].dt.isocalendar().week.astype('category')\n",
-    "    dataframe['month'] = dataframe['month'].astype('category')\n",
-    "    dataframe['hour'] = dataframe['hour'].astype('category')\n",
+    "    if 'month' in dataframe.columns:\n",
+    "        dataframe['month'] = dataframe['month'].astype('category')\n",
+    "    else:\n",
+    "        dataframe['month'] = dataframe['date'].dt.month.astype('category')\n",
     "    return dataframe\n",
     "\n",
     "\n",
-    "train, test = change_date(train), change_date(test)"
+    "train, test, train_additional = change_date(train), change_date(test), change_date(train_additional)"
    ],
    "id": "8d2c1f67577a7d8e",
    "outputs": [],
@@ -166,7 +175,7 @@
     "from sklearn.impute import KNNImputer\n",
     "\n",
     "\n",
-    "def fill_x(column_name='dayofweek'):\n",
+    "def fill_train(column_name='dayofweek'):\n",
     "    column_values = train[column_name].unique()\n",
     "    for date in column_values:\n",
     "        for i, column in enumerate(starts_with):\n",
@@ -188,13 +197,12 @@
     "            if not df.empty:\n",
     "                test.loc[test[column_name] == date, similar_columns] = imputers[i].transform(df)\n",
     "\n",
-    "def drop_high_nans(dataframe):  # usuwamy kolumny o dużej liczbie wartości NaN\n",
+    "def drop_high_nans():  # usuwamy kolumny o dużej liczbie wartości NaN\n",
     "    columns_nans = []\n",
-    "    for i, el in enumerate(dataframe.columns):\n",
-    "        if dataframe[el].isna().sum() / len(dataframe) >= 0.9:\n",
+    "    for i, el in enumerate(train.columns):\n",
+    "        if train[el].isna().sum() / len(train) >= 0.9:\n",
     "            columns_nans.append(el)\n",
-    "    dataframe.drop(columns_nans, axis=1, inplace=True)\n",
-    "    return dataframe\n",
+    "    return columns_nans\n",
     "\n",
     "def drop_high_correlated_columns():\n",
     "    matrix = train.corr(numeric_only=True).abs()\n",
@@ -213,32 +221,67 @@
     "        dataframe[f'{splitted[0]}_{splitted[1]}_diff'] = dataframe[zenith] - dataframe[azimuth_columns[i]]\n",
     "        dataframe.drop(zenith_columns[i], axis=1, inplace=True)\n",
     "        dataframe.drop(azimuth_columns[i], axis=1, inplace=True)\n",
-    "    return dataframe\n",
-    "\n",
-    "def change_to_categorical():\n",
-    "    for column in train.select_dtypes(include=['object']).columns:\n",
-    "        train[column] = train[column].astype('category')\n",
-    "        test[column] = test[column].astype('category')\n",
-    "\n",
-    "\n",
+    "    return dataframe"
+   ],
+   "id": "4cf45820641da986",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "b37c0c27fc1028f1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "test_ids = test['id']\n",
-    "train.drop(columns=['id', 'city', 'country', 'date', 'site_id', 'site_latitude', 'site_longitude'], inplace=True)\n",
-    "test.drop(columns=['id', 'city', 'country', 'date', 'site_id', 'site_latitude', 'site_longitude'], inplace=True)\n",
+    "train.drop(columns=['id', 'city', 'country', 'date', 'site_id', 'site_latitude', 'site_longitude', 'hour'], inplace=True)\n",
+    "test.drop(columns=['id', 'city', 'country', 'date', 'site_id', 'site_latitude', 'site_longitude', 'hour'], inplace=True)\n",
     "starts_with = train.columns.str.split('_', expand=True).levels[0].to_frame()\n",
-    "starts_with.drop(['month', 'hour', 'pm2'], inplace=True)\n",
+    "starts_with.drop(['month', 'pm2'], inplace=True)\n",
     "starts_with = starts_with[0].tolist()\n",
     "\n",
     "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
-    "train, test = drop_high_nans(train), drop_high_nans(test)\n",
+    "high_nans = drop_high_nans()\n",
+    "train, test = train.drop(columns=high_nans, axis=1), test.drop(columns=high_nans, axis=1)\n",
     "# fill_x(), fill_test()\n",
     "# to_drop = drop_low_correlated_columns_to_pm2_5()\n",
     "# to_drop = np.concatenate((to_drop, drop_high_correlated_columns()), axis=0)\n",
     "# train, test = train.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
     "# train, test = subract_azimuth_zenith(train), subract_azimuth_zenith(test)\n",
-    "# change_to_categorical()\n",
-    "# categorical = train.select_dtypes(include=['category']).columns.values"
+    "\n",
+    "train.info()"
    ],
    "id": "cba91ead48820415",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Połączenie danych z innych konkursów",
+   "id": "80ffbbc967cc015b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# train_additional.drop(columns=['ID', 'humidity', 'temp_mean', 'device', 'site_latitude', 'site_longitude', 'date'], inplace=True)\n",
+    "# \n",
+    "# for name in train_additional.columns.values:\n",
+    "#     name_parts = name.split('_')\n",
+    "#     name_parts_lower = [x.lower() for x in name_parts]\n",
+    "#     train_additional.rename(columns={name: '_'.join(name_parts_lower)}, inplace=True)\n",
+    "# \n",
+    "# train = pd.concat([train, train_additional])\n",
+    "# train.reset_index(drop=True, inplace=True)\n",
+    "# \n",
+    "# train.info()"
+   ],
+   "id": "81a9005ec2b73b6a",
    "outputs": [],
    "execution_count": null
   },
@@ -292,9 +335,10 @@
    "source": [
     "from scipy.stats import zscore\n",
     "\n",
+    "\n",
     "detect_outliers = zscore(train['pm2_5'])\n",
     "\n",
-    "quantiles = pd.DataFrame(list(zip(np.linspace(0.9, 1, 20), [np.quantile(detect_outliers, el) for el in np.linspace(0.9, 1, 20)])), columns=['quantile', 'zscore'])\n",
+    "quantiles = pd.DataFrame(list(zip(np.linspace(0.95, 1, 20), [np.quantile(detect_outliers, el) for el in np.linspace(0.95, 1, 20)])), columns=['quantile', 'zscore'])\n",
     "quantiles"
    ],
    "id": "e7d3f816a2bb205d",
@@ -313,7 +357,7 @@
    "source": [
     "def del_pm2_5_outliers():\n",
     "    indexes_to_drop = []\n",
-    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.99)\n",
+    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.991)\n",
     "    for i, el in enumerate(detect_outliers):\n",
     "        if q1 < el > q2:\n",
     "            indexes_to_drop.append(i)\n",
