voting + dodatkowe dane

--- a/models.ipynb
+++ b/models.ipynb
@@ -415,7 +415,7 @@
     "from sklearn.model_selection import LearningCurveDisplay\n",
     "\n",
     "\n",
-    "LearningCurveDisplay.from_estimator(xgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
+    "# LearningCurveDisplay.from_estimator(xgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
    ],
    "id": "f50472f99612e67c",
    "outputs": [],
