--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -60,14 +60,22 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "def change_date(dataframe):\n",
+    "def change_date(dataframe, sin_cos=True):\n",
     "    dataframe['date'] = pd.to_datetime(dataframe['date'])\n",
-    "    dataframe['dayofweek'] = dataframe['date'].dt.dayofweek.astype('category')\n",
-    "    dataframe['week'] = dataframe['date'].dt.isocalendar().week.astype('category')\n",
+    "    dataframe['dayofweek'] = dataframe['date'].dt.dayofweek\n",
+    "    dataframe['week'] = dataframe['date'].dt.isocalendar().week\n",
     "    if 'month' in dataframe.columns:\n",
-    "        dataframe['month'] = dataframe['month'].astype('category')\n",
+    "        dataframe['month'] = dataframe['month']\n",
     "    else:\n",
-    "        dataframe['month'] = dataframe['date'].dt.month.astype('category')\n",
+    "        dataframe['month'] = dataframe['date'].dt.month\n",
+    "    if sin_cos:\n",
+    "        dataframe['sin_dayofweek'] = np.sin(2 * np.pi * dataframe['dayofweek'] / 7)\n",
+    "        dataframe['cos_dayofweek'] = np.cos(2 * np.pi * dataframe['dayofweek'] / 7)\n",
+    "        dataframe['sin_week'] = np.sin(2 * np.pi * dataframe['week'] / 52)\n",
+    "        dataframe['cos_week'] = np.cos(2 * np.pi * dataframe['week'] / 52)\n",
+    "        dataframe['sin_month'] = np.sin(2 * np.pi * dataframe['month'] / 12)\n",
+    "        dataframe['cos_month'] = np.cos(2 * np.pi * dataframe['month'] / 12)\n",
+    "        \n",
     "    return dataframe\n",
     "\n",
     "\n",
@@ -357,7 +365,7 @@
    "source": [
     "def del_pm2_5_outliers():\n",
     "    indexes_to_drop = []\n",
-    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.991)\n",
+    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.99)\n",
     "    for i, el in enumerate(detect_outliers):\n",
     "        if q1 < el > q2:\n",
     "            indexes_to_drop.append(i)\n",
